# capll

./: .gitignore  CAPL_Data_Structures_Guide.md  CAPL_Events_Guide.md  CAPL_Interview_100_QA.md  CAPL_Learning_Guide.md  CAPL_Real_Work_Interview_Scenarios.md  GLOSSARY.md  README_Scripts.md  ROADMAP.md  script_01_hello_world.capl  script_03_operators.capl  script_04_control_flow.capl  script_07_arrays.capl  script_08_timers.capl  script_10_send_messages.capl  script_14_state_machine.capl  script_15_multiplexed.capl  script_16_events_comprehensive.capl  script_17_diagnostics_uds.capl  script_18_error_frames.capl  script_21_data_structures.capl  script_23_lin_bus.capl  script_25_xcp_basic.capl  script_26_panel_interaction.capl
adas_ecu_cpp/: CMakeLists.txt  README.md
adas_ecu_cpp/include/diagnostics/: dtc_manager.hpp
adas_ecu_cpp/include/drivers/: can_driver.hpp  can_messages.hpp
adas_ecu_cpp/include/features/: acc_controller.hpp  bsd_controller.hpp  hha_controller.hpp  lka_controller.hpp  parking_controller.hpp  sensor_fusion.hpp
adas_ecu_cpp/include/hal/: hal_timer.hpp  hal_types.hpp
adas_ecu_cpp/include/rtos/: scheduler.hpp
adas_ecu_cpp/src/: main.cpp
adas_ecu_cpp/src/diagnostics/: dtc_manager.cpp
adas_ecu_cpp/src/drivers/: can_driver.cpp
adas_ecu_cpp/src/features/: acc_controller.cpp  bsd_controller.cpp  hha_controller.cpp  lka_controller.cpp  parking_controller.cpp  sensor_fusion.cpp
adas_ecu_cpp/src/hal/: hal_timer.cpp
adas_ecu_cpp/src/rtos/: scheduler.cpp
adas_scenario_questions/: 12_adas_testing_star_answers.md
automotive_homologation/: 01_homologation_fundamentals.md  02_ece_regulations_r112_r7_r6.md  03_optics_testing.md  04_certification_documentation.md  05_star_scenarios.md  06_interview_qa.md  README.md
automotive_project_manager/: 08_product_manager_star_scenarios.md
autosar_basics/: 01_autosar_architecture_overview.md
bms_validation/: 01_bms_cell_monitoring.capl  02_bms_contactor_precharge.capl  03_bms_uds_diagnostics.capl  04_bms_python_automation.py  06_bms_hil_test_framework.py  07_bms_technical_reference.md  README.md
byd_sealion7/: 01_vehicle_architecture_overview.md  02_hardware_architecture.md  03_software_architecture.md  04_adas_autonomous_features.md  05_connectivity_performance_infotainment.md  06_testing_validation_competitive.md  README.md
c_cpp_adas/: 01_c_fundamentals_adas.md  02_cpp_oop_algorithms_adas.md  03_rtos_safety_adas.md  04_star_interview_adas.md  README.md
c_cpp_bms/: 01_c_fundamentals_bms.md  02_cpp_oop_algorithms_bms.md  03_rtos_safety_bms.md  04_star_interview_bms.md  README.md
capl_scripts/: CAPL_Color_Code_Script.capl  script_02_data_types.capl  script_05_loops.capl  script_06_functions.capl  script_09_receive_messages.capl  script_11_string_operations.capl  script_12_bitwise.capl  script_13_validation.capl  script_19_database_access.capl  script_20_logging.capl  script_22_canfd.capl  script_24_test_module.capl
ci_cd_automotive/: 01_cicd_pipeline_guide.md
cluster_scenarios/: 04_speed_rpm_display.md  05_warning_telltales.md  06_fuel_range_ev.md  07_adas_driver_info.md  08_diagnostics_dtc.md  09_startup_shutdown_stress.md
cybersecurity_automotive/: 01_iso21434_tara.md
dbc_arxml_files/: powertrain_sample.dbc
ethernet_automotive/: 01_automotive_ethernet_guide.md
(+204 files in other folders)
